--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Salimos a domimicilio por noches por horas, a todos lados de la ciudad quieres ver mi catalogo?.</div>
+C0GEMOS a domimicilio por noches por horas, a todos lados de la ciudad quieres ver mi catalogo al dessnudo?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Si
@@ -59,7 +59,7 @@ Para el Registro Gratis y C0GER con cualquier Chica, presione el boton ENTRAR Ab
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://imgur.com/xwM8Ofu.mp4" type="video/mp4">
+<source src="https://cdn-bimi.akamaized.net/landings/268643/1641828300/images/1.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
